--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <div class="container" style="padding: 20px 0px; min-height: 100%; position: relative; height: auto;">
             <ul class="list-group" style="padding-bottom: 60px;">
-                <li class="list-group-item"><wb:follow-button uid="2182437790" type="red_2" width="160" height="24"></wb:follow-button><script src="https://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script></li>
+                <li class="list-group-item"><wb:follow-button uid="2182437790" type="red_2" width="160" height="24"></wb:follow-button><script async src="https://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script></li>
                 <li class="list-group-item"><a href="https://twitter.com/fkey123?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @fkey123</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
                 <li class="list-group-item"><a href="https://live.bilibili.com/528819">bilibili live</a></li>
                 <li class="list-group-item"><a href="https://patreon.com/fkey">Patreon</a></li>
